# BenchKit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/benchkit/: cli.py  executor.py  ollama.py  report.py  runner.py
src/benchkit/benchmarks/: __init__.py  arc.py  base.py  gsm8k.py  hellaswag.py  humaneval.py  mbpp.py  mcq.py  quickbench.py  truthfulqa.py  utils.py
src/benchkit/datasets/: arc_challenge.jsonl  gsm8k.jsonl  hellaswag.jsonl  mbpp.jsonl  quickbench.jsonl  truthfulqa.jsonl
